5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1709_3066.log
== TEST (2019-05-02 11:22:40) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida<=N):
	print(vida-(10*N))
	print("VIVO")
else:
print("MORTO")
-- ERROR:
File "XXXX", line 11
    print("MORTO")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:01) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida<=N):
	print(vida-(10*N))
	print("VIVO")
else:
	print("MORTO")
-- OUTPUT:
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:23:35) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida<=N):
	print(vida-(10*N))
	print("VIVO")
else:
	print("MORTO")
-- EXECUTION TIME:
0.17572
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
MORTO
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
MORTO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:18) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida<=N):
	print(vida-(10*N))
	print("VIVO")
else:
	print("MORTO")
-- OUTPUT:
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:30) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida>=N):
	print(vida-(10*N))
	print("VIVO")
else:
	print("MORTO")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:24:40) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida>=N):
	print(vida-(10*N))
	print("VIVO")
else:
	print("MORTO")
-- EXECUTION TIME:
0.14904
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
-130.0
VIVO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
-180.0
VIVO
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:01) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
if(vida>=N):
	print(vida-(10*N))
	print("VIVO")
elif(vida<=N):
	print(vida-(10*N))
	print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:34) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(vida>=N):
	print(q)
	print("VIVO")
elif(vida<=N):
	print(q)
	print("MORTO")
else(q<0):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 14
    else(q<0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:45) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(vida>=N):
	print(q)
	print("VIVO")
elif(vida<=N):
	print(q)
	print("MORTO")
elif(q<0):
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:27) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(vida>=N):
	print(q)
	print("VIVO")
elif(vida<=N):
	print(q)
	print("MORTO")
elif(q<=0):
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:29) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(vida>0):
	print(q)
	print("VIVO")
elif(vida<=0):
	print(q)
	print("MORTO")
elif(N>=36):
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:08) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(vida>0):
	print(q)
	print("VIVO")
elif(vida<=0):
	print(q)
	print("MORTO")
else:
	if(N>=36):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    print("Entrada invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:46) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:57) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:33:59) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.160736
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
-130.0
VIVO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:03) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:35) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	elif(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 9
    elif(vida>0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:44) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	elif(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 9
    elif(vida>0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:51) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:56) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:16) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 12
    elif(vida=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:25) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida==0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:53) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:02) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:25) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q=0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:51) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:16) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:43) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:19) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:35) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:56) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:41:15) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<0)or(vida==0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:41:15) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<0)or(vida==0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.126974
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
-130.0
VIVO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:41:16) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N<=36)and(N>=3):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<0)or(vida==0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:44) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:03) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:11) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:25) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:58) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida>0):
		print(q)
		print("VIVO")
	elif(vida<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:30) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida>0):
		print(q)
		print("VIVO")
	if(vida<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:50) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida<0):
		print(q)
		print("VIVO")
	if(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:57) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida<0):
		print(q)
		print("VIVO")
	if(vida<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
VIVO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:06) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida<0):
		print(q)
		print("VIVO")
	if(vida>=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:16) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(vida<0):
		print(q)
		print("VIVO")
	if(vida>=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:57) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:06) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
False
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:21) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q=0)
		print("MORTO")
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(q=0)
TypeError: 'q' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:34) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:45) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:49) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:08) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
False
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:47:21) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.18411
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
False
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:26) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q==0)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
False
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:46) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q)
		print("MORTO")
else:
	print("Entrada invalida")
-- OUTPUT:
-130.0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:49:29) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q=0):
		print(q)
		print("MORTO")
	elif(q<0)
		print(q)
		q=0
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 12
    if(q=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:50:15) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(q=0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(q=0)
TypeError: 'q' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:27) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:34) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.147414
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:53:00) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:53:15) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:53:26) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:53:40) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.214557
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:13) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:35) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	if(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 8
    (N>=3)and(N<=36):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:54:52) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	elif(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.276061
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:52) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	elif(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:54:54) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	elif(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.162586
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210.0
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:54) 
-- CODE:
vida=int(input("valor: "))
x=float(input("valor: "))
y=float(input("valor: "))
z=float(input("valor: "))

N=x+y+z
q=(vida-(10*N))
if(N>=3)and(N<=36):
	if(q>0):
		print(q)
		print("VIVO")
	elif(q<=0):
		print(0)
		print("MORTO")		
else:
	print("Entrada invalida")
-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
